Fixed about section spacing issue

--- a/frontend-spa/CSS/style.css
+++ b/frontend-spa/CSS/style.css
@@ -576,7 +576,6 @@ form {
   font-size: 20px;
   margin-left: 10%;
   margin-right: 10%;
-  padding-top: 100px;
   line-height: 30px;
 }
 
